# rasterix

./: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md
.github/workflows/: build-n-test.yml  publish-crate.yml  rust.yml
rasterix/: Cargo.toml  build.rs
rasterix-codegen/: Cargo.toml  README.md
rasterix-codegen/src/: builder.rs  error.rs  lib.rs
rasterix-codegen/src/generate/: datablock_gen.rs  decode_gen.rs  encode_gen.rs  enum_gen.rs  generator.rs  item_gen.rs  mod.rs  record_gen.rs  struct_gen.rs  utils.rs
rasterix-codegen/src/parse/: xml_model.rs
rasterix-codegen/src/transform/: ir.rs  lower_ir.rs  lowerer.rs  transformer.rs
rasterix-codegen/tests/: codegen_tests.rs  parse_tests.rs  transform_tests.rs
rasterix-core/: Cargo.toml
rasterix-core/src/: bit_reader.rs  bit_writer.rs  error.rs  fspec.rs
rasterix/tests/: builder_tests.rs  roundtrip_tests.rs
test-utils/: Cargo.toml
test-utils/src/: lib.rs
testdata/invalid/: bit_mismatch.xml  duplicate_enum_field.xml  duplicate_epb_enum.xml  duplicate_epb_field.xml  duplicate_field_same_scope.xml  extended_bit_mismatch.xml
testdata/valid/: compound_complex.xml  compound_simple.xml  enum_basic.xml  epb_enum.xml  epb_field.xml  explicit_item.xml  extended_multi_part.xml  extended_single_part.xml  mixed_all.xml  multi_item_record.xml  repetitive_basic.xml  repetitive_with_epb.xml  same_name_different_items.xml  same_name_different_parts.xml  same_name_different_subitems.xml  simple_fixed.xml  spare_bits.xml
